Fix another minor bug in style.css
The text in the image placeholder was not using "text-align: center",
which made it not look so nice when the window dimensions changed.

--- a/style.css
+++ b/style.css
@@ -77,6 +77,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    text-align: center;
     background-color: #6D747D;
     color: #F9FAF8;
 }
